# jupyterlab-braket-devices

./: .copier-answers.yml  .gitignore  .prettierignore  AGENTS.md  LICENSE  README.md  RELEASE.md  conftest.py  install.json  package.json  pyproject.toml
.github/workflows/: build.yml  check-release.yml
jupyter-config/server-config/: jupyterlab_braket_devices.json
jupyterlab_braket_devices/: __init__.py  routes.py
jupyterlab_braket_devices/tests/: __init__.py  test_routes.py
scripts/: export_device_data.py  list_braket_devices.py
spec/: devices.md  qpu_details.md  user_stories.md  ux_design.md
src/: api.ts  index.ts  request.ts  staticDeviceData.ts  theme-provider.ts  types.ts  widget.tsx
src/__tests__/: jupyterlab_braket_devices.spec.ts
src/components/: CopyButton.tsx  DeviceDetail.tsx  DeviceDetailHeader.tsx  DeviceList.tsx  DeviceSummary.tsx  DeviceTabs.tsx  ErrorBanner.tsx  FilterBar.tsx  MetricItem.tsx  ParameterGrid.tsx  ProviderLogo.tsx  StatusBar.tsx
src/components/sections/: EssentialMetricsSection.tsx  OperationalDetailsSection.tsx  PerformanceMetricsSection.tsx
src/components/tabs/: CalibrationTab.tsx  DetailsTab.tsx  NativeGatesTab.tsx
src/types/: images.d.ts
src/utils/: logoMapper.ts  propertiesParser.ts
ui-tests/: package.json
ui-tests/tests/: jupyterlab_braket_devices.spec.ts
